--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,600,300,400italic,600italic);
-/* line 5, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +25,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -503,6 +503,7 @@ th {
   padding: 0;
 }
 
+/* Base stuff: variables, typography */
 /* line 7, ../sass/_typography.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", arial, sans-serif;
@@ -520,35 +521,35 @@ p, span, a {
   line-height: 24px;
 }
 
-/* line 10, ../sass/_base.scss */
+/* line 15, ../sass/_base.scss */
 img {
   max-width: 100%;
 }
 
-/* line 13, ../sass/_base.scss */
+/* line 18, ../sass/_base.scss */
 .container {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
 }
-/* line 17, ../sass/_base.scss */
+/* line 22, ../sass/_base.scss */
 .container .content {
   padding: 10px 25px;
 }
 
-/* line 24, ../sass/_base.scss */
+/* line 29, ../sass/_base.scss */
 .particles-container {
   position: relative;
   width: 100%;
   height: 40vh;
 }
-/* line 28, ../sass/_base.scss */
+/* line 33, ../sass/_base.scss */
 .particles-container > #particles-js {
   height: 40vh;
   width: 100%;
   background: #002449;
 }
-/* line 33, ../sass/_base.scss */
+/* line 38, ../sass/_base.scss */
 .particles-container .logo {
   position: absolute;
   top: 50%;
@@ -556,29 +557,29 @@ img {
   margin-left: -125px;
   margin-top: -125px;
 }
-/* line 39, ../sass/_base.scss */
+/* line 44, ../sass/_base.scss */
 .particles-container .logo img {
   max-width: 250px;
   height: auto;
 }
 
-/* line 47, ../sass/_base.scss */
+/* line 52, ../sass/_base.scss */
 .subscription {
   margin-top: 20px;
   width: 100%;
   text-align: center;
 }
-/* line 51, ../sass/_base.scss */
+/* line 56, ../sass/_base.scss */
 .subscription form {
   width: 100%;
   text-align: center;
 }
-/* line 56, ../sass/_base.scss */
+/* line 61, ../sass/_base.scss */
 .subscription form div.mc-field-group,
 .subscription form div.clear {
   display: inline;
 }
-/* line 60, ../sass/_base.scss */
+/* line 65, ../sass/_base.scss */
 .subscription form input[type='email'] {
   display: inline-block;
   width: 70%;
@@ -588,13 +589,13 @@ img {
   transition: all 0.2s;
   font-size: 1.2em;
 }
-/* line 68, ../sass/_base.scss */
+/* line 73, ../sass/_base.scss */
 .subscription form input[type='email']:focus {
   outline: none;
   border-width: 0 0 3px 0;
   border-color: #005fac;
 }
-/* line 74, ../sass/_base.scss */
+/* line 79, ../sass/_base.scss */
 .subscription form input[type='submit'] {
   display: inline-block;
   width: 25%;
@@ -605,37 +606,37 @@ img {
   color: #f5f5f5;
   transition: all 0.2s;
 }
-/* line 83, ../sass/_base.scss */
+/* line 88, ../sass/_base.scss */
 .subscription form input[type='submit']:hover, .subscription form input[type='submit']:focus {
   background: #005fac;
   color: #ffffff;
 }
 
-/* line 94, ../sass/_base.scss */
+/* line 99, ../sass/_base.scss */
 .footer-message {
   margin: 72px auto 100px auto;
   text-align: center;
   max-width: 800px;
 }
 
-/* line 101, ../sass/_base.scss */
+/* line 106, ../sass/_base.scss */
 .footer {
   position: fixed;
   width: 100%;
   bottom: 0;
   left: 0;
 }
-/* line 106, ../sass/_base.scss */
+/* line 111, ../sass/_base.scss */
 .footer .social {
   text-align: center;
   padding: 25px;
   background: #fff;
 }
-/* line 110, ../sass/_base.scss */
+/* line 115, ../sass/_base.scss */
 .footer .social > li {
   display: inline-block;
 }
-/* line 112, ../sass/_base.scss */
+/* line 117, ../sass/_base.scss */
 .footer .social > li > a {
   text-transform: uppercase;
   font-family: "Montserrat", arial, sans-serif;
@@ -646,7 +647,7 @@ img {
   padding: 25px 10px;
   transition: all 0.2s ease-in;
 }
-/* line 121, ../sass/_base.scss */
+/* line 126, ../sass/_base.scss */
 .footer .social > li > a:hover {
   border-radius: 2px;
   background: #0050a2;
@@ -654,45 +655,54 @@ img {
 }
 
 @media (max-width: 960px) {
-  /* line 134, ../sass/_base.scss */
-  .particles-container {
-    height: 40vh;
-  }
-  /* line 136, ../sass/_base.scss */
-  .particles-container > #particles-js {
-    height: 40vh;
-  }
-  /* line 139, ../sass/_base.scss */
-  .particles-container .logo {
-    margin-left: -62.5px;
-    margin-top: -62.5px;
-  }
-  /* line 142, ../sass/_base.scss */
-  .particles-container .logo img {
-    max-width: 125px;
-  }
-
-  /* line 149, ../sass/_base.scss */
+  /* line 141, ../sass/_base.scss */
   .subscription form input[type='email'] {
     width: 100%;
     margin-bottom: 12px;
   }
-  /* line 153, ../sass/_base.scss */
+  /* line 145, ../sass/_base.scss */
   .subscription form input[type='submit'] {
     width: 100%;
   }
 
-  /* line 159, ../sass/_base.scss */
+  /* line 151, ../sass/_base.scss */
   .footer {
     border-top: 1px solid #0050a2;
     box-shadow: 0px -1px 5px rgba(0, 0, 0, 0.25);
   }
-  /* line 162, ../sass/_base.scss */
+  /* line 154, ../sass/_base.scss */
   .footer .social {
     padding: 10px;
   }
-  /* line 164, ../sass/_base.scss */
+  /* line 156, ../sass/_base.scss */
   .footer .social > li > a {
     padding: 10px;
   }
+}
+/* Layouts */
+/* line 18, ../sass/layouts/_layout-center.scss */
+.layout-center {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+  max-width: 1000px;
+}
+/* line 29, ../sass/layouts/_layout-center.scss */
+.layout-center--shared-grid {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+/* Components */
+/* line 3, ../sass/components/_header.scss */
+.header {
+  background-image: url("../assets/images/header-bg.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+}
+/* line 10, ../sass/components/_header.scss */
+.header__image {
+  display: block;
 }
