--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,10 @@
 
 /* Layouts */
 @import "layouts/layout-center.scss";
+@import "layouts/layout-2column.scss";
 
 /* Components */
 @import "components/header.scss";
+@import "components/title.scss";
+@import "components/content.scss";
+@import "components/save-the-date.scss";
