--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,3 +22,5 @@
 @import "components/title.scss";
 @import "components/content.scss";
 @import "components/save-the-date.scss";
+@import "components/newsletter.scss";
+@import "components/social.scss";
