--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -20,6 +20,7 @@
   color: #fff;
   text-shadow: 0px 0px 4px lighten(black, 90%);
   font-size: 55px;
+  line-height: (2*$base-line-height)*1px;
   font-weight: 700;
   letter-spacing: -0.25px;
 }
