Countdonw coloer changed to variable blue

--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -29,7 +29,7 @@
     font-size: 18px;
     text-align: center;
     font-style: italic;
-    color: $blue-light;
+    color: $blue;
   }
 
   &__drupal {
