quick mobile styles for responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic,700);
-/* line 5, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +25,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../var/lib/gems/2.3.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -587,6 +587,22 @@ img {
   border-right: 1px solid #88d3db;
 }
 
+@media (max-width: 767px) {
+  /* line 26, ../sass/layouts/_layout-2column.scss */
+  .layout-2column {
+    display: block;
+  }
+  /* line 29, ../sass/layouts/_layout-2column.scss */
+  .layout-2column__col-x {
+    display: block;
+    width: 100%;
+  }
+  /* line 32, ../sass/layouts/_layout-2column.scss */
+  .layout-2column__col-x:not(.plain):nth-child(2n+1) {
+    border-right: none;
+    margin-bottom: 10px;
+  }
+}
 /* Components */
 /* line 3, ../sass/components/_header.scss */
 .header {
@@ -618,6 +634,13 @@ img {
   letter-spacing: -0.25px;
 }
 
+@media (max-width: 767px) {
+  /* line 31, ../sass/components/_title.scss */
+  .title--highlighted {
+    font-size: 2.3em;
+    letter-spacing: inherit;
+  }
+}
 /* line 3, ../sass/components/_content.scss */
 .content {
   background-image: url("../assets/images/content-bg.jpg");
@@ -679,6 +702,21 @@ img {
   margin-top: 54px;
 }
 
+@media (max-width: 767px) {
+  /* line 70, ../sass/components/_content.scss */
+  .content__page {
+    padding-top: 150px;
+  }
+  /* line 73, ../sass/components/_content.scss */
+  .content__flying {
+    top: 420px;
+  }
+  /* line 76, ../sass/components/_content.scss */
+  .content__countdown {
+    font-size: 20px;
+    line-height: 1.8;
+  }
+}
 /* line 3, ../sass/components/_save-the-date.scss */
 .save-the-date {
   width: 306px;
@@ -762,6 +800,31 @@ img {
   top: 5px;
 }
 
+@media (max-width: 767px) {
+  /* line 85, ../sass/components/_save-the-date.scss */
+  .save-the-date {
+    width: 100%;
+  }
+  /* line 87, ../sass/components/_save-the-date.scss */
+  .save-the-date__title {
+    font-size: 2.2em;
+    line-height: 1.2;
+    letter-spacing: inherit;
+  }
+  /* line 92, ../sass/components/_save-the-date.scss */
+  .save-the-date__location {
+    font-size: 18px;
+  }
+  /* line 94, ../sass/components/_save-the-date.scss */
+  .save-the-date__location:before, .save-the-date__location:after {
+    content: '';
+    width: 67px;
+  }
+  /* line 100, ../sass/components/_save-the-date.scss */
+  .save-the-date__social {
+    height: 20px;
+  }
+}
 /* line 3, ../sass/components/_newsletter.scss */
 .newsletter {
   background-color: #0275bb;
@@ -837,6 +900,16 @@ img {
   right: 24px;
 }
 
+@media (max-width: 767px) {
+  /* line 77, ../sass/components/_newsletter.scss */
+  .newsletter__form {
+    width: 300px;
+  }
+  /* line 80, ../sass/components/_newsletter.scss */
+  .newsletter__email {
+    width: 300px;
+  }
+}
 /* line 3, ../sass/components/_social.scss */
 .social {
   color: #fff;
