--- a/sass/components/_save-the-date.scss
+++ b/sass/components/_save-the-date.scss
@@ -29,7 +29,7 @@
 
   &__title {
     font-weight: 700;
-    color: #0275bb;
+    color: $blue;
     font-size: 47px;
     line-height: 56px;
     letter-spacing: -2.5px;
@@ -77,5 +77,28 @@
   &__social-link--twitter {
     position: relative;
     top: 5px;
+  }
+}
+
+// Mobile styles ( visible on all media up to 767px which is usually tablets on portrait orientation )
+@media (max-width: 767px) {
+  .save-the-date {
+    width: 100%;
+    &__title {
+      font-size: 2.2em;
+      line-height: 1.2;
+      letter-spacing: inherit;
+    }
+    &__location {
+      font-size: 18px;
+      &:before,
+      &:after {
+        content: '';
+        width: 67px;
+      }
+    }
+    &__social {
+      height: 20px;
+    }
   }
 }
