--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -24,3 +24,12 @@
   font-weight: 700;
   letter-spacing: -0.25px;
 }
+
+
+// Mobile styles ( visible on all media up to 767px which is usually tablets on portrait orientation )
+@media (max-width: 767px) {
+  .title--highlighted {
+    font-size: 2.3em;
+    letter-spacing: inherit;
+  }
+}
