--- a/sass/components/_newsletter.scss
+++ b/sass/components/_newsletter.scss
@@ -27,6 +27,7 @@
     width: 360px;
     margin: 0 auto;
     margin-bottom: 100px;
+    overflow: hidden;
   }
 
   &__email {
@@ -58,15 +59,20 @@
   }
 
   &__submit {
-    width: 33px;
-    height: 22px;
+    width: 80px;
+    height: 100%;
     border: 0;
-    background: url('../assets/images/submit.jpg');
+    background: url('../assets/images/submit.jpg') no-repeat 50% 50%;
     text-indent: -66666px;
     position: absolute;
     z-index: 10;
-    top: 24px;
-    right: 24px;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    transition: all 0.3s cubic-bezier(0.680, -1.550, 0.265, 1.550);
+    &:hover {
+      transform: translateX(15px) scale(1.02);
+    }
   }
 }
 
